--- a/etc/localrc.sample
+++ b/etc/localrc.sample
@@ -5,10 +5,11 @@ SERVICE_TOKEN=secrete
 
 EXTRA_OPTS=(scheduler_default_filters=AllHostsFilter)
 
-FLAT_INTERFACE=virbr0
-PUBLIC_INTERFACE=eth0
 HOST_IP=192.168.27.100
-FLOATING_RANGE=192.168.27.128/28
+
+# PUBLIC_INTERFACE=eth1
+# FLAT_INTERFACE=eth0
+# FLOATING_RANGE=192.168.27.128/28
 
 disable_service n-net
 enable_service q-svc
@@ -18,7 +19,7 @@ enable_service q-l3
 enable_service q-meta
 enable_service neutron
 # Optional, to enable tempest configuration as part of devstack
-enable_service tempest
+# enable_service tempest
 
 
 # Use stable release Grizzly
